data/all_generated_tests/raw_wast_tests/br_InfiniteLoops_502.wast
;; 3. **Test Description:**    - Generate a loop where a `br` instruction targets a label defined in an outer scope. Make sure there is a missing operand when the `br` instruction is called.    - **Constraint Checking:** Tests whether the `br` implementation correctly identifies missing operands and handles the control flow accordingly.    - **Relation to Infinite Loops:** Failure in identifying missing operands may leave the loop in an infinite state due to unresolved control flow.

(assert_invalid
  (module
    (func
      (block
        (loop (result i32)
          (block (result i32)
            (br 1)
          )
        )
      )
    )
  )
  "type mismatch"
)